syntax = "proto3";

// Services definition
service BlocksTransferService {
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse);
  rpc SaveBlock(SaveBlockRequest) returns (SaveBlockResponse);
}

// Messages definition
message GetBlockRequest {
  repeated string blocksIdentifiers = 1;
}

message GetBlockResponse {
  string blocks = 1;
}

message BlockInfo {
  string blockIdentifier = 1;
  int32 turn = 2;
}

message SaveBlockRequest {
  repeated BlockInfo blocks = 1;
}

message SaveBlockResponse {
  bool success = 1;
}
